--- a/src/main/resources/application-sec01.yaml
+++ b/src/main/resources/application-sec01.yaml
@@ -1,3 +1,17 @@
+#spring:
+#  cloud:
+#    function:
+#      definition: function #uses only function and ignores the consumer defined
+#    stream:
+#      bindings:
+#        consumer-in-0:
+#          destination: input-topic
+#          group: some-group
+#        function-in-0:
+#          destination: input-topic
+#          group: some-group
+#
+#
 spring:
   cloud:
     function:
@@ -10,4 +24,11 @@ spring:
         function-in-0:
           destination: input-topic
           group: some-group
-
+      kafka:
+        binder:
+#          configuration:
+            #configuration
+#          producer-properties:
+            #producer
+          consumer-properties:
+            "group.instance.id": "123"
