--- a/src/main/resources/application-sec01.yaml
+++ b/src/main/resources/application-sec01.yaml
@@ -1,15 +1,15 @@
-spring:
-  cloud:
-    function:
-      definition: function #uses only function and ignores the consumer defined
-    stream:
-      bindings:
-        consumer-in-0:
-          destination: input-topic
-          group: some-group
-        function-in-0:
-          destination: input-topic
-          group: some-group
+#spring:
+#  cloud:
+#    function:
+#      definition: function #uses only function and ignores the consumer defined
+#    stream:
+#      bindings:
+#        consumer-in-0:
+#          destination: input-topic
+#          group: some-group
+#        function-in-0:
+#          destination: input-topic
+#          group: some-group
 
 
 #spring:
@@ -32,3 +32,27 @@ spring:
 #            #producer
 #          consumer-properties:
 #            "group.instance.id": "123"
+
+#--
+spring:
+  cloud:
+    function:
+      definition: consumer #uses only function and ignores the consumer defined
+    stream:
+      bindings:
+        consumer-in-0:
+          destination: input-topic
+          group: some-group
+        function-in-0:
+          destination: input-topic
+          group: some-group
+      kafka:
+        bindings:
+          function-in-0:
+            consumer:
+              configuration:
+                "group.instance.id": "567"
+          consumer-in-0:
+            consumer:
+              configuration:
+                "group.instance.id": "789"
