1. Producer Ack Config Update - Auto Acknowledge

--- a/src/main/resources/application-sec02.yaml
+++ b/src/main/resources/application-sec02.yaml
@@ -9,3 +9,9 @@ spring:
           group: some-group
         producer-out-0:
           destination: input-topic
+      kafka:
+        bindings:
+          producer-out-0:
+            producer:
+              configuration:
+                "acks": "-1"
