1. Using Cloud Stream processors

--- a/src/main/resources/application-sec01.yaml
+++ b/src/main/resources/application-sec01.yaml
@@ -56,3 +56,7 @@ spring:
             consumer:
               configuration:
                 "group.instance.id": "789"
+        binder:
+          configuration:
+            consumer-properties:
+              "auto.offset.reset": "earliest"
