--- a/src/main/resources/application-sec05.yaml
+++ b/src/main/resources/application-sec05.yaml
@@ -1,3 +1,33 @@
+#spring:
+#  cloud:
+#    function:
+#      definition: orderEventProducer;processor;digitalDelivery;physicalDelivery; #uses producer, consumer, and processor
+#    stream:
+#      bindings:
+#        orderEventProducer-out-0: #implicit binding
+#          destination: order-events
+#        processor-in-0:
+#          destination: order-events
+#          group: processor-group
+#        digital-delivery-out: #explicit binding
+#          destination: digital-topic
+#        physical-delivery-out:
+#          destination: physical-topic
+#        digitalDelivery-in-0:
+#          destination: digital-topic
+#          group: digital-group
+#        physicalDelivery-in-0:
+#          destination: physical-topic
+#          group: physical-group
+#      kafka:
+#        binder:
+#          producer-properties:
+#            "key.serializer": org.apache.kafka.common.serialization.StringSerializer
+#          consumer-properties:
+#            "key.deserializer": org.apache.kafka.common.serialization.StringDeserializer
+#            "auto.offset.reset": "earliest"
+#            "group.instance.id": "1"
+
 spring:
   cloud:
     function:
@@ -9,18 +39,12 @@ spring:
         processor-in-0:
           destination: order-events
           group: processor-group
-        digital-delivery-out: #explicit binding
-          destination: digital-topic
-        physical-delivery-out:
-          destination: physical-topic
         digitalDelivery-in-0:
           destination: digital-topic
           group: digital-group
         physicalDelivery-in-0:
           destination: physical-topic
           group: physical-group
-
-
       kafka:
         binder:
           producer-properties:
