--- a/src/main/resources/application-sec11.yaml
+++ b/src/main/resources/application-sec11.yaml
@@ -7,10 +7,15 @@ spring:
         consumer-in-0:
           destination: input-topic
           group: some-group
-#      kafka:
-#        binder:
-#          consumer-properties:
-#            "key.deserializer": org.apache.kafka.common.serialization.IntegerDeserializer
-#            "value.deserializer": org.apache.kafka.common.serialization.IntegerDeserializer
-#            "auto.offset.reset": "earliest"
-#            "group.instance.id": "1"
+          consumer:
+            use-native-decoding: true #optional
+        producer-out-0:
+          producer:
+            use-native-encoding: true #compulsory
+      kafka:
+        binder:
+          consumer-properties:
+            "value.deserializer": org.springframework.kafka.support.serializer.JsonDeserializer
+            "auto.offset.reset": "earliest"
+            "group.instance.id": "1"
+            "spring.json.trusted.packages": "*"
